k8s/apps/security/authentik/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
  annotations:
    kubernetes.io/ingress.class: ingress-external-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: embed-frame
          namespace: authentik
      services:
        - name: authentik-server
          namespace: authentik
          port: http
